welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:13: error: type mismatch;
 found   : Unit
 required: Boolean
 	 	if (vuBiscuit=true){
                             ^Program:16: error: type mismatch;
 found   : Unit
 required: Boolean
    else {
         ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit==false){
  ^