welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit=false
def haveBaggle():Boolean = {
  
  if (vuBiscuit==false){
    for (cnt <- 1 to 6){
      
      avance()
      if (estSurBiscuit){
      vuBiscuit=true
      }
      recule()
  	}  
 	 	if (vuBiscuit=true){
    	return true
  	}
    else {

  	}
  }
}